trunk/Archive2/36/909a09f3cbd9f5/output
main.cpp:1:0: error: unterminated #ifndef
 #ifndef _PIPE_H_
 ^
